# harm-from-hexxy

./: .copier-answers.yml  LICENSE  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: build.yml  release.yml
buildSrc/src/main/kotlin/harm_from_hexxy/: java.gradle.kts  minecraft.gradle.kts  mod-publish.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/harm_from_hexxy/utils/: mod-dependencies.gradle.kts
common/: build.gradle.kts
common/src/main/java/net/beholderface/harmfromhexxy/: HarmFromHexxyItemRegistry.java  HexxyMaskItem.java
common/src/main/java/net/beholderface/harmfromhexxy/envstuff/: CastEnvComponents.java  HexxySeesYouComponent.java
common/src/main/java/net/beholderface/harmfromhexxy/mixin/: HarmFromHexxyMixinConfigPlugin.java  MixinDatagenMain.java
common/src/main/kotlin/net/beholderface/harmfromhexxy/: HarmFromHexxy.kt  HarmFromHexxyAbstractions.kt  HarmFromHexxyClient.kt
common/src/main/kotlin/net/beholderface/harmfromhexxy/config/: HarmFromHexxyClientConfig.kt  HarmFromHexxyServerConfig.kt
common/src/main/kotlin/net/beholderface/harmfromhexxy/datagen/: HarmFromHexxyActionTags.kt
common/src/main/kotlin/net/beholderface/harmfromhexxy/networking/: HarmFromHexxyNetworking.kt
common/src/main/kotlin/net/beholderface/harmfromhexxy/networking/handler/: ClientMessageHandler.kt  ServerMessageHandler.kt
common/src/main/kotlin/net/beholderface/harmfromhexxy/networking/msg/: HarmFromHexxyMessage.kt  MsgSyncConfigS2C.kt
common/src/main/kotlin/net/beholderface/harmfromhexxy/registry/: HarmFromHexxyActions.kt  HarmFromHexxyRegistrar.kt
common/src/main/resources/: architectury.common.json  harm_from_hexxy-common.mixins.json
common/src/main/resources/assets/harm_from_hexxy/lang/: en_us.flatten.json5
common/src/main/resources/assets/harm_from_hexxy/models/item/: hexxy_mask.json
doc/: README.md  hexdoc.toml
doc/resources/assets/harm_from_hexxy/lang/: en_us.flatten.json5
doc/src/hexdoc_harm_from_hexxy/: _hooks.py
fabric/: build.gradle.kts
fabric/src/main/kotlin/net/beholderface/harmfromhexxy/fabric/: FabricHarmFromHexxy.kt  FabricHarmFromHexxyClient.kt  FabricHarmFromHexxyModMenu.kt  FabricHarmFromHexxyServer.kt  HarmFromHexxyAbstractionsImpl.kt
fabric/src/main/kotlin/net/beholderface/harmfromhexxy/fabric/datagen/: FabricHarmFromHexxyDatagen.kt
fabric/src/main/resources/: fabric.mod.json  harm_from_hexxy-fabric.mixins.json
forge/: build.gradle.kts
forge/src/main/kotlin/net/beholderface/harmfromhexxy/forge/: ForgeHarmFromHexxy.kt  ForgeHarmFromHexxyClient.kt  ForgeHarmFromHexxyServer.kt  HarmFromHexxyAbstractionsImpl.kt
forge/src/main/kotlin/net/beholderface/harmfromhexxy/forge/datagen/: ForgeHarmFromHexxyDatagen.kt
forge/src/main/resources/: harm_from_hexxy-forge.mixins.json  pack.mcmeta
gradle/: libs.versions.toml
